<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="64dp"
    android:paddingTop="16dp"
    android:paddingEnd="64dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="left"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/face_detection_flow_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="left"
            android:text="@string/how_can_assist"
            android:textColor="@color/black"
            android:textSize="48sp" />
    </LinearLayout>

    <Button
        android:id="@+id/face_detection_flow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black_87"
        android:text="@string/take_face_flow"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/document_detection_flow_button"
        app:layout_constraintStart_toStartOf="@id/document_detection_flow_button" />

    <Button
        android:id="@+id/document_detection_flow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:backgroundTint="@color/black_87"
        android:text="@string/take_document_flow"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>